--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8"
