--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.1",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8"
