--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-big-calendar": "^1.11.1",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8"
   },
