--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.1",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.5",
